# WeBuildRobots-TeamBalp

./: .gitignore  .gitmodules  README.md
Arduino/: CMakeLists.txt  communication.cpp  communication.h  drive.cpp  main.cpp  make_command.sh  webuild.cpp
Arduino/i2c_demo/: i2c_demo.ino
Arduino/test/: communication_test.cpp  timer_test.cpp
pi/: CMakeLists.txt  main.cpp
pi/edgeDetect/: CMakeLists.txt  EdgeDetector.cpp  EdgeDetector.h  main.cpp
test/: test.py
yocto/: setup.sh
yocto-docker/: Dockerfile  bblayers.conf  local.conf
yocto/build_hiq/conf/: bblayers.conf  local.conf
yocto/meta-meta-webuildrobots-balp/: README
yocto/meta-meta-webuildrobots-balp/conf/: layer.conf
yocto/meta-meta-webuildrobots-balp/recipes-support/opencv/: opencv_3.1.bb
yocto/meta-meta-webuildrobots-balp/recipes-support/raspicam/: raspicam_0.1.3.bb
